k3s/kube-prometheus-stack/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: d-kline-org-tls
